CloudFormation/EC2Deploy.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Resources": {
        "MyKeyPair": {
            "Type": "AWS::EC2::KeyPair",
            "Properties": {
                "KeyName": "Mykey"
            }
        }
        "MyVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16"
            },
        }
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
        }
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "MyVPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        }
        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "MyVPC"
                },
                "CidrBlock": "10.0.1.0/24"
            }
        }
        "PrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "MyVPC"
                },
                "CidrBlock": "10.0.2.0/24"
            }
        }
        "WEBSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security group for the Web tier",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {
                    "Ref": "MyVPC"
                }
            }
        }
        "APPSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security group for the Application tier",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "SourceSecurityGroupId": {
                            "Ref": "WEBSG"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "MyVPC"
                }
            }
        }
        "DBSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security group for the DB tier",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 3306,
                        "ToPort": 3306,
                        "SourceSecurityGroupId": {
                            "Ref": "WEBSG"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 3306,
                        "ToPort": 3306,
                        "SourceSecurityGroupId": {
                            "Ref": "APPSG"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "MyVPC"
                }
            }
        }
        "WebServerInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
				"KeyName": { "Ref": "MyKeyPair" },
                "ImageId": "ami-036d8cf6cf7a08f64",
                "InstanceType": "t2.micro",
                "SecurityGroupIds": [
                    {
                        "Ref": "WEBSG"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "SubnetId": {
                            "Ref": "PublicSubnet"
                        }
                    }
                ]
            }
        }
        "AppServerInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
				"KeyName": { "Ref": "MyKeyPair" },
                "ImageId": "ami-036d8cf6cf7a08f64",
                "InstanceType": "t2.micro",
                "SecurityGroupIds": [
                    {
                        "Ref": "APPSG"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "SubnetId": {
                            "Ref": "PrivateSubnet"
                        }
                    }
                ]
            }
        }
        "MyRDS": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "DBSubnetGroupName": "DBSG",
                "AllocatedStorage": "20",
                "DBInstanceClass": "db.t2.micro",
                "Engine": "mysql",
                "EngineVersion": "5.7",
                "MasterUsername": "admin",
                "MasterUserPassword": "MySQL@1234",
                "MultiAZ": "false"
            },
        }
    }
}
